--- a/ContactController.cls
+++ b/ContactController.cls
@@ -7,13 +7,15 @@ public with sharing class ContactController {
             strConName = '%' + strConName + '%';
         String query = 'SELECT Id, Name, Email, AccountId, Account.Name, OwnerId, Owner.Name, CreatedBy.Name, CreatedDate, Contact_Level__c ' +
                 'FROM Contact ' +
-                'WHERE Name LIKE :strConName';]
+                'WHERE Name LIKE :strConName';
 
         if(!String.isEmpty(sortField)) {
             query += ' ORDER BY ' + sortField + (isAsc ? ' ASC ' : ' DESC ');
         }
         return Database.query(query);
     }
+
+    
 
     @AuraEnabled
     public static void deleteContact(String contactId) {
@@ -40,5 +42,8 @@ public with sharing class ContactController {
 
         delete objects;
         delete contacts;
+    }
+    public static void methodA() {
+        return null;
     }
 }
